--- a/WebApplication14/wwwroot/css/site.css
+++ b/WebApplication14/wwwroot/css/site.css
@@ -92,8 +92,8 @@
 }
 
 input[type="email"] {
-    width: 90%;
-    padding: 20px;
+/*    width: 90%;*/
+/*    padding: 20px;*/
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
