--- a/WebApplication14/Views/Home/Contact.cshtml
+++ b/WebApplication14/Views/Home/Contact.cshtml
@@ -1,6 +1,6 @@
 ﻿<section class="contact-form-section">
     <h1>Contact Us</h1>
-    <form class="contact-form" action="#" method="post">
+    <form class="contact-form" action="/Home/Contact" method="post">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Enter your name" required>
