--- a/WebApplication14/Views/Shared/_Layout.cshtml
+++ b/WebApplication14/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <li class="ad">Home</li>
 
                     <li class="ad">About Us</li>
-                    <li class="ad">Contact Us</li>
+                    <li class="ad"> <a style="color: black; text-decoration: none;" href="@Url.Action("Contact", "Home")">Contact Us</a>  </li>
                     <li>
                         <button style="color: black;" class="search-icon" type="button" id="searchButton">
                             <i class="fa fa-search"></i>
