--- a/WebApplication14/Views/Home/Contact.cshtml
+++ b/WebApplication14/Views/Home/Contact.cshtml
@@ -15,7 +15,7 @@
         </div>
         <div class="form-group">
             <label for="message">Message</label>
-            <textarea id="message" name="message" rows="5" placeholder="Write your message here" required></textarea>
+            <textarea id="Message" name="Message" rows="5" placeholder="Write your message here" required></textarea>
         </div>
         <button type="submit" class="btn-submit">Send Message</button>
     </form>
