--- a/WebApplication14/Views/Home/Privacy.cshtml
+++ b/WebApplication14/Views/Home/Privacy.cshtml
@@ -4,7 +4,7 @@
     <div class="subscribe-container">
         <h1>Subscribe for Blog Notifications</h1>
         <p>Enter your email below to get updates on the latest blogs:</p>
-        <form action="#" method="POST">
+        <form action="/Home/Privacy" method="POST">
             <input type="email" name="email" placeholder="Enter your email" required>
             <button type="submit">Subscribe</button>
         </form>
